# rakugaki

./: .gitignore  Cargo.toml  LICENSE-APACHE  README.md
.beads/: issues.jsonl
.cargo-husky/hooks/: pre-commit
examples/: display.rs
src/: lib.rs
